# Distrolis

./: .gitignore  CMakeLists.txt  Distributed Search Engine.cpp  Distributed Search Engine.vcxproj  README.md  WebCrawler.cpp  WebCrawler.h  Web_Crawler.cpp  Web_Crawler.h  notes.txt  seedUrls.txt
include/: BM25Ranker.h  DataBase.h  DocumentRetriever.h  DocumentTypes.h  HTMLParser.h  InvertedIndex.h  PhraseTypes.h  Posting.h  SearchEngine.h  SearchEngineServer.h  SeedURLS.h  ThreadPool.h  URLParser.h  WebCrawler.h  WordProcessor.h
source/: BM25Ranker.cpp  DataBase.cpp  DocumentRetriever.cpp  HTMLparser.cpp  InvertedIndex.cpp  PhraseTypes.cpp  SearchEngine.cpp  SearchEngineServer.cpp  SeedURLS.cpp  ThreadPool.cpp  URLParser.cpp  WebCrawler.cpp  WordProcessor.cpp  XmlParser.cpp  main.cpp
